Uptdate with Nicolas changes
get csv for his model

--- a/get_csv.ipynb
+++ b/get_csv.ipynb
@@ -26,6 +26,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#full_data"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 40,
    "metadata": {},
    "outputs": [],
@@ -48,7 +57,56 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# années > 1000 h1_annee.csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query_2 = 'SELECT * FROM mydb.`Maison _Appartement`, WHERE année >1000;'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results_2 = pd.read_sql_query(query_2, conn)\n",
+    "results.to_csv(\"h1_annee.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# années < 1000 h2_false.csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query_3 = 'SELECT * FROM mydb.`Maison _Appartement`, WHERE année <1000;'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results_3 = pd.read_sql_query(query_3, conn)\n",
+    "results.to_csv(\"h2_false.csv\", index=False)"
+   ]
   }
  ],
  "metadata": {
